[gd_scene load_steps=17 format=2]

[ext_resource path="res://MenuUI/Main.gd" type="Script" id=1]
[ext_resource path="res://MenuUI/Main/Title_Witchball_M03_400.png" type="Texture" id=2]
[ext_resource path="res://MenuUI/Main/button_start_menu_normal_200.png" type="Texture" id=3]
[ext_resource path="res://MenuUI/Main/button_start_menu_pressed_200.png" type="Texture" id=4]
[ext_resource path="res://MenuUI/Main/button_start_menu_hovering_200.png" type="Texture" id=5]
[ext_resource path="res://MenuUI/UI Particel/UI_Particle_Menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://MenuUI/UI Particel/UI_Particle.gd" type="Script" id=7]
[ext_resource path="res://MenuUI/Main/Button_Options_Menu_Normal.png" type="Texture" id=8]
[ext_resource path="res://MenuUI/Main/Button_Options_Menu_Pressed.png" type="Texture" id=9]
[ext_resource path="res://MenuUI/Main/Button_Options_Menu_Hovering.png" type="Texture" id=10]
[ext_resource path="res://MenuUI/Main/Button_Credits_Menu_Normal.png" type="Texture" id=11]
[ext_resource path="res://MenuUI/Main/Button_Credits_Menu_Pressed.png" type="Texture" id=12]
[ext_resource path="res://MenuUI/Main/Button_Credits_Menu_hovering.png" type="Texture" id=13]
[ext_resource path="res://MenuUI/Main/button_quit_menu_normal_200.png" type="Texture" id=14]
[ext_resource path="res://MenuUI/Main/button_quit_menu_pressed_200.png" type="Texture" id=15]
[ext_resource path="res://MenuUI/Main/button_quit_menu_hovering_200.png" type="Texture" id=16]

[node name="Main" type="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
script = ExtResource( 1 )
_sections_unfolded = [ "Margin" ]

[node name="content" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 760.0
margin_top = 236.0
margin_right = 1160.0
margin_bottom = 844.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="title" type="TextureRect" parent="content" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 329.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="C1" type="CenterContainer" parent="content" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 333.0
margin_right = 400.0
margin_bottom = 608.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="buttons" type="VBoxContainer" parent="content/C1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 300.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = -3
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="start" type="TextureButton" parent="content/C1/buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../quit")
focus_neighbour_bottom = NodePath("../options")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Focus", "Pause", "Textures" ]

[node name="UI_Particel_Menu" parent="content/C1/buttons/start" index="0" instance=ExtResource( 6 )]

visible = false
script = ExtResource( 7 )

[node name="options" type="TextureButton" parent="content/C1/buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 68.0
margin_right = 200.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../start")
focus_neighbour_bottom = NodePath("../Credits")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
_sections_unfolded = [ "Focus", "Textures" ]

[node name="UI_Particel_Menu" parent="content/C1/buttons/options" index="0" instance=ExtResource( 6 )]

visible = false
script = ExtResource( 7 )

[node name="Credits" type="TextureButton" parent="content/C1/buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 136.0
margin_right = 200.0
margin_bottom = 207.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../options")
focus_neighbour_bottom = NodePath("../quit")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
_sections_unfolded = [ "Focus", "Textures" ]

[node name="UI_Particel_Menu" parent="content/C1/buttons/Credits" index="0" instance=ExtResource( 6 )]

visible = false
script = ExtResource( 7 )

[node name="quit" type="TextureButton" parent="content/C1/buttons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 200.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../start")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
_sections_unfolded = [ "Focus", "Textures" ]

[node name="UI_Particel_Menu" parent="content/C1/buttons/quit" index="0" instance=ExtResource( 6 )]

visible = false
script = ExtResource( 7 )

[connection signal="pressed" from="content/C1/buttons/start" to="." method="_on_start_pressed"]

[connection signal="pressed" from="content/C1/buttons/options" to="." method="_on_options_pressed"]

[connection signal="pressed" from="content/C1/buttons/Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="content/C1/buttons/quit" to="." method="_on_quit_pressed"]


